--- a/src/index.css
+++ b/src/index.css
@@ -98,4 +98,10 @@
   .second-btn{
     @apply py-2 px-6 bg-rose-bonbon hover:bg-pink-600 text-white text-lg font-semibold capitalize transition-colors duration-300 ease-in-out;
   }
+  .mySwiper .swiper-pagination .swiper-pagination-bullet {
+    @apply bg-white opacity-50;
+  }
+  .mySwiper .swiper-pagination .swiper-pagination-bullet-active {
+    @apply bg-steel-blue opacity-100;
+  }
 }
