--- a/src/index.css
+++ b/src/index.css
@@ -104,4 +104,13 @@
   .mySwiper .swiper-pagination .swiper-pagination-bullet-active {
     @apply bg-steel-blue opacity-100;
   }
+  .big-title{
+    @apply text-rose-bonbon font-title font-bold text-4xl xs:text-6xl leading-tight capitalize mb-4;
+  }
+  .subtitle{
+    @apply text-xl text-steel-blue font-semibold capitalize;
+  }
+  .parag{
+    @apply text-slate-600 leading-6;
+  }
 }
