--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@
     @apply bg-steel-blue opacity-100;
   }
   .big-title{
-    @apply text-rose-bonbon font-title font-bold text-4xl xs:text-6xl leading-tight capitalize mb-4;
+    @apply text-rose-bonbon font-title font-bold text-4xl sm:text-6xl leading-tight capitalize mb-4;
   }
   .subtitle{
     @apply text-xl text-steel-blue font-semibold capitalize;
