--- a/src/index.css
+++ b/src/index.css
@@ -113,4 +113,10 @@
   .parag{
     @apply text-slate-600 leading-6;
   }
+  .social-list-card-contact{
+    @apply p-2 border border-zinc-50 rounded-full hover:bg-steel-blue hover:border-steel-blue hover:scale-90 transition-all duration-300 ease-in-out;
+  }
+  .input-contact{
+    @apply py-4 border-b border-slate-600 text-slate-600 outline-none focus:border-rose-bonbon focus:text-rose-bonbon focus:placeholder:text-rose-bonbon focus:border-b-2 bg-transparent;
+  }
 }
